set the body to use a table background image and a clear sans-serif font, ensured text is white for contrast, and styled the message element to be italicized.

--- a/JavaScript Fundamentals/02 Blackjack Game/index.css
+++ b/JavaScript Fundamentals/02 Blackjack Game/index.css
@@ -1,3 +1,15 @@
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-image: url('images/table.png');
+    background-size: cover;
+    text-align: center;
+    color: white;
+}
+
 h1 {
     color: goldenrod;
+}
+
+#message-el {
+    font-style: italic;
 }
